# ISI---Programowanie-w-Pythonie---Cz-I

./: pyproject.toml
my_app/: latest.csv  missing_values.csv  pyproject.toml  values.csv
my_app/src/my_app/: exceptions.py  main.py  utils.py
my_app/tests/: test_download.py
