[project]
name = "my-app"
version = "0.1.0"
description = ""
authors = [
    {name = "wiktoafu92",email = "wiktoafu92@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
